--- a/ra/admin/templates/adminlte/base.html
+++ b/ra/admin/templates/adminlte/base.html
@@ -480,7 +480,7 @@
         jQuery(document).ready(function () {
             $('.page-container').show();
             RA_Main.init();
-            $.ra.report_loader.loadChartWidgets();
+            $.ra.report_loader.initialize();
             if (typeof (Storage) !== "undefined") {
                 // Code for localStorage/sessionStorage.
                 var check = localStorage.getItem("ra-intro");
