--- a/ra/admin/templates/adminlte/report_list_forms.html
+++ b/ra/admin/templates/adminlte/report_list_forms.html
@@ -30,7 +30,10 @@
                                         <div class="col-sm-12">
                                             <div class="formContainer" data-report-url="{{ report.get_url }}">
                                                 {% csrf_token %}
-                                                {% crispy report.initialize_form %}
+                                                {% with report.get_initialized_form as form %}
+                                                        {% crispy form form.get_crispy_helper %}
+                                                {% endwith %}
+
                                             </div>
 
                                         </div>
@@ -47,13 +50,15 @@
                             </div>
                             <div class="card">
                                 <div class="card-body">
-                                    <div data-report-widget
+                                    <div data-report-widget data-no-auto-load
                                          data-report-url="{{ report.get_url }}"
                                          data-extra-params="{{ data_extra_param|default:'' }}"
                                          data-success-callback="{{ data_success_callback|default:'' }}"
+
                                             {#             data-chart-id="{{ data_chart_id|default:'' }}"#}
                                     >
-                                        {% if not no_chart %}
+                                        {% if report.chart_settings and not no_chart %}
+
                                             <div id="container" data-report-chart
                                                  style="width:100%; height:400px;"></div>
                                             {#                <canvas data-report-chart height="100"></canvas>#}
