--- a/ra/admin/templates/adminlte/report_list.html
+++ b/ra/admin/templates/adminlte/report_list.html
@@ -96,67 +96,69 @@
                     }
                 }
             );
+
+            $('.refreshReport').on('click', function (event) {
+                console.log('Clcilcked ')
+                event.preventDefault();
+                let $this = $(this);
+                let $elem = $('[data-report-widget][data-report-url="' + $this.attr('data-report-url') + '"]')
+                let $form = $('.formContainer[data-report-url="' + $this.attr('data-report-url') + '"] form')
+                $.ra.report_loader.refreshReportWidget($elem, $form.serialize())
+            });
+
+            var hash = document.location.hash;
+            var prefix = "tab_";
+            var myChart;
+
+            if (hash) {
+                let report_slug = hash.replace(prefix, "");
+                $('.nav-tabs a[href="' + report_slug + '"]').tab('show');
+                loadTab(report_slug)
+            } else {
+                let first_report = $('.nav-tabs a:first');
+                first_report.tab('show');
+                loadTab(first_report.attr('href'))
+            }
+
+            // Change hash for page-reload
+            $(".nav-tabs a").on('shown.bs.tab', function (e) {
+                var report_slug = $(this).attr('href')
+                window.location.hash = e.target.hash.replace("#", "#" + prefix);
+                loadTab(report_slug)
+            });
+
+            function loadTab(tab_href, target) {
+                let $tabcontent = $(tab_href);
+                $tabcontent.find('select').select2({theme: 'bootstrap4'})
+                $tabcontent.find('.refreshReport').first().trigger('click')
+            }
+
+
+            $('.printReport').on('click', function (event) {
+                event.preventDefault();
+                let $this = $(this);
+                var report_slug = $this.attr('data-report-slug');
+                var report_url = $this.attr('data-report-url');
+                var print_theme = $this.attr('print_theme');
+                var formSerialize = $('div[data-report-slug=' + report_slug + '] form').serialize();
+                print_theme = typeof (print_theme) === 'undefined' ? 'default' : print_theme;
+                window.open(report_url + '?&print=true&print_theme=' + print_theme + formSerialize, report_slug);
+            });
+
+            $('.download-csv').on('click', function (event) {
+                event.preventDefault();
+                let $this = $(this);
+
+                var report_slug = $this.attr('data-report-slug');
+                var report_url = $this.attr('data-report-url');
+                var formSerialize = $('div[data-report-slug=' + report_slug + '] form').serialize();
+
+                window.open(report_url + '?&csv=true&download=true&' + formSerialize, report_slug);
+
+
+            });
+
         })
-
-        var hash = document.location.hash;
-        var prefix = "tab_";
-        var myChart;
-
-        if (hash) {
-            let report_slug = hash.replace(prefix, "");
-            $('.nav-tabs a[href="' + report_slug + '"]').tab('show');
-            loadTab(report_slug)
-        } else {
-            let first_report = $('.nav-tabs a:first');
-            first_report.tab('show');
-            loadTab(first_report.attr('href'))
-        }
-
-        // Change hash for page-reload
-        $(".nav-tabs a").on('shown.bs.tab', function (e) {
-            var report_slug = $(this).attr('href')
-            window.location.hash = e.target.hash.replace("#", "#" + prefix);
-            loadTab(report_slug)
-        });
-
-        function loadTab(tab_href, target) {
-            let $tabcontent = $(tab_href);
-            $tabcontent.find('select').select2({theme: 'bootstrap4'})
-            $tabcontent.find('.refreshReport').trigger('click')
-        }
-
-
-        $('.refreshReport').on('click', function (event) {
-            event.preventDefault();
-            let $this = $(this);
-            let $elem = $('[data-report-widget][data-report-url="' + $this.attr('data-report-url') + '"]')
-            let $form = $('.formContainer[data-report-url="' + $this.attr('data-report-url') + '"] form')
-            $.ra.report_loader.refreshReportWidget($elem, $form.serialize())
-        });
-
-        $('.printReport').on('click', function (event) {
-            event.preventDefault();
-            let $this = $(this);
-            var report_slug = $this.attr('data-report-slug');
-            var report_url = $this.attr('data-report-url');
-            var print_theme = $this.attr('print_theme');
-            var formSerialize = $('div[data-report-slug=' + report_slug + '] form').serialize();
-            print_theme = typeof (print_theme) === 'undefined' ? 'default' : print_theme;
-            window.open(report_url + '?&print=true&print_theme=' + print_theme + formSerialize, report_slug);
-        });
-
-        $('.download-csv').on('click', function (event) {
-            event.preventDefault();
-            let $this = $(this);
-
-            var report_slug = $this.attr('data-report-slug');
-            var report_url = $this.attr('data-report-url');
-            var formSerialize = $('div[data-report-slug=' + report_slug + '] form').serialize();
-
-            window.open(report_url + '?&csv=true&download=true&' + formSerialize, report_slug);
-
-
-        });
 
 
     </script>
