Move reversion templates to ra

--- a/ra/admin/templates/adminlte/change_list_results.html
+++ b/ra/admin/templates/adminlte/change_list_results.html
@@ -7,7 +7,7 @@
 {% if results %}
     <div class="results card">
         <div class="">
-            <table id="result_list" class="table table-hover table-stripe table-condensed table-bordered">
+            <table id="result_list" class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                 <tr>
                     {% for header in result_headers %}
