--- a/ra/admin/templates/ra/admin/menu.html
+++ b/ra/admin/templates/ra/admin/menu.html
@@ -23,6 +23,7 @@
                                 <a href="{{ model.url }}"{{ model.blank|yesno:' target=_blank,' }}
                                    class="nav-link {{ model.is_active|yesno:' active,' }}">
                                     {#                                    <i class="far fa-circle nav-icon"></i>#}
+                                    <i class="nav-icon fas fa-circle"></i>
                                     <p>{{ model.label }}</p>
                                 </a>
                             </li>
