--- a/ra/admin/templates/ra/admin/report_list.html
+++ b/ra/admin/templates/ra/admin/report_list.html
@@ -4,20 +4,15 @@
 
 {% load i18n admin_urls static admin_modify ra_admin_tags %}
 
-
+{% block content_title %} {{ title }}{% endblock %}
 {% block breadcrumbs %}
-    {#    <ul class="breadcrumb breadcrumb-caret position-right">#}
-    <li class="breadcrumb-item">
-        <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-    </li>
 
-    <li class="breadcrumb-item">
-        {% trans "Reports" %}
-    </li>
-
-    <li class="breadcrumb-item">
-        {{ title }}
-    </li>
+    <ol class="breadcrumb float-sm-right">
+        <li class="breadcrumb-item"><a href="{% url 'admin:index' %}"><i
+                class="fa fa-tachometer-alt"></i> {% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item">{% trans "Reports" %}</li>
+        <li class="breadcrumb-item active">{{ title }}</li>
+    </ol>
 {% endblock %}
 
 {% block bodyclass %}{% endblock %}
@@ -27,35 +22,31 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
-        {% for report in reports.reports %}
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab"
-                   role="tab"
-                   href="#{{ report.get_report_slug }}"
-                   ra-report-param="{% get_typed_report_url_param report original report_link_suffix %}&"
-                >{{ report.get_report_title }}</a>
-            </li>
-        {% endfor %}
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-header" style="border-bottom: none">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    {% for report in reports.reports %}
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab"
+                               role="tab"
+                               href="#{{ report.get_report_slug }}"
+                               ra-report-param="{% get_typed_report_url_param report original report_link_suffix %}&"
+                            >{{ report.get_report_title }}</a>
+                        </li>
+                    {% endfor %}
 
-    </ul>
+                </ul>
+            </div>
+            <div class="card-body">
 
-    <style>
-        [dir=ltr] label[for]:first-letter {
-            text-transform: capitalize;
-        }
-
-    </style>
-    <div class="{{ has_detached_sidebar|yesno:'container-detached,' }}">
-        <div class="{{ has_detached_sidebar|yesno:'content-detached,' }}">
-            <div class="card">
-                {% include RA_THEME|add:'/report_list_forms.html' %}
+                {% include 'ra/admin/report_list_forms.html' %}
             </div>
         </div>
     </div>
-
 {% endblock %}
-{% block bottom_script %}
+{% block extrajs %}
+    {{ block.super }}
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
@@ -98,7 +89,6 @@
             );
 
             $('.refreshReport').on('click', function (event) {
-                console.log('Clcilcked ')
                 event.preventDefault();
                 let $this = $(this);
                 let $elem = $('[data-report-widget][data-report-url="' + $this.attr('data-report-url') + '"]')
@@ -128,7 +118,9 @@
 
             function loadTab(tab_href, target) {
                 let $tabcontent = $(tab_href);
-                $tabcontent.find('select').select2({theme: 'bootstrap4'})
+                $tabcontent.find('select').select2(
+                    {#{theme: 'bootstrap4'}#}
+                )
                 $tabcontent.find('.refreshReport').first().trigger('click')
             }
 
