--- a/ra/admin/templates/ra/report_list.html
+++ b/ra/admin/templates/ra/report_list.html
@@ -1,4 +1,4 @@
-{% extends "ra/admin/base_site.html" %}
+{% extends "ra/base_site.html" %}
 {% load ra_tags crispy_forms_tags crispy_forms_field %}
 
 
@@ -39,7 +39,7 @@
             </div>
             <div class="card-body">
 
-                {% include 'ra/admin/report_list_forms.html' %}
+                {% include 'ra/report_list_forms.html' %}
             </div>
         </div>
     </div>
