--- a/ra/admin/templates/ra/view.html
+++ b/ra/admin/templates/ra/view.html
@@ -1,4 +1,4 @@
-{% extends 'ra/admin/base_site.html' %}
+{% extends 'ra/base_site.html' %}
 {% load ra_admin_tags ra_tags i18n admin_urls %}
 
 {% block content_title %} {{ title }}{% endblock %}
