--- a/ra/admin/templates/ra/base_site.html
+++ b/ra/admin/templates/ra/base_site.html
@@ -124,4 +124,16 @@
 {% endblock %}
 
 
-{% block footer %} {% endblock %}
+{% block footer %}
+    {% if not is_popup %}
+        <footer class="main-footer {{ jazzmin_ui.footer_classes }}">
+                <div class="float-right d-none d-sm-inline">
+                    <b>Version</b> 2.5
+                </div>
+
+                <strong>Ra ERP</strong>
+
+        </footer>
+
+    {% endif %}
+{% endblock %}
