Changed the filter for the tag use

--- a/ra/admin/templates/ra/sidebar.html
+++ b/ra/admin/templates/ra/sidebar.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="info">
                     {% if perms|can_view_self %}
-                        <a href="{{ request.user|jazzy_admin_url }}" class="d-block">{{ request.user }}</a>
+                        <a href="{% jazzy_admin_url request.user %}" class="d-block">{{ request.user }}</a>
                     {% else %}
                         <span class="d-block" style="color: white;">{{ request.user }}</span>
                     {% endif %}
