Use slick reporting helpers , relax filter_must_exist

--- a/ra/admin/templates/ra/base_site.html
+++ b/ra/admin/templates/ra/base_site.html
@@ -54,7 +54,10 @@
 
     <script type="text/javascript" src="{% static 'ra/js/ra.report_loader.js' %}"></script>
     <script type="text/javascript" src="{% static 'ra/js/ra.dataComprehension.js' %}"></script>
-    <script type="text/javascript" src="{% static 'ra/js/ra.highchart.js' %}"></script>
+
+    <script src="{% static 'slick_reporting/main.js' %}"></script>
+    <script src="{% static 'slick_reporting/ra.highchart.js' %}"></script>
+
 
 
     <script src="{% static 'ra/js/ra.datatable.js' %}"></script>
