--- a/ra/admin/templates/ra/view.html
+++ b/ra/admin/templates/ra/view.html
@@ -1,4 +1,5 @@
-{% extends 'ra/base_site.html' %}
+{#{% extends 'ra/base_site.html' %}#}
+{% extends "admin/base_site.html" %}
 {% load ra_admin_tags ra_tags i18n admin_urls %}
 
 {% block content_title %} {{ title }}{% endblock %}
@@ -25,3 +26,14 @@
     </ol>
 {% endblock %}
 
+{% block content %}
+        <table class="table">
+        {% for line in data %}
+            <tr>
+                <th>{{ line.0 }}</th>
+                <td>{{ line.1 }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+
+{% endblock %}
